{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 46,
  "lineage": "fa8fe5e4-8601-a169-4160-f97a95444349",
  "resources": [
    {
      "module": "module.api_gateway",
      "mode": "data",
      "type": "aws_lb",
      "name": "fiap_lanchonete_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:304372392573:loadbalancer/net/a28e0082b782744c6bf8e87c6529457c/0d5936dea66f79c7",
            "arn_suffix": "net/a28e0082b782744c6bf8e87c6529457c/0d5936dea66f79c7",
            "connection_logs": [
              {
              }
            ],
            "dns_name": "a28e0082b782744c6bf8e87c6529457c-0d5936dea66f79c7.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:304372392573:loadbalancer/net/a28e0082b782744c6bf8e87c6529457c/0d5936dea66f79c7",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "a28e0082b782744c6bf8e87c6529457c",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087d65942d74136c0"
              },
              {
                "subnet_id": "subnet-0b30cbfe0492f6d07"
              },
              {
                "subnet_id": "subnet-0f10a943148850528"
              }
            ],
            "subnets": [
              "subnet-087d65942d74136c0",
              "subnet-0b30cbfe0492f6d07",
              "subnet-0f10a943148850528"
            ],
            "tags": {
              "kubernetes.io/cluster/fiap-lanchonete-eks": "owned",
              "kubernetes.io/service-name": "default/fiap-lanchonete-lb"
            },
            "vpc_id": "vpc-0188908d09e941928",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "fiap_lanchonete_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/fiap-lanchonete-lb",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-internal": "false",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "fiap-lanchonete-lb",
                "namespace": "default",
                "resource_version": "686",
                "uid": "28e0082b-7827-44c6-bf8e-87c6529457c8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.23.232",
                "cluster_ips": [
                  "172.20.23.232"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30915,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "fiap-lanchonete-pedido"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a28e0082b782744c6bf8e87c6529457c-0d5936dea66f79c7.elb.us-east-1.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.kube",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "fiap_lanchonete_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "default/fiap-lanchonete-lb",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-internal": "false",
                  "service.beta.kubernetes.io/aws-load-balancer-scheme": "internet-facing",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "fiap-lanchonete-lb",
                "namespace": "default",
                "resource_version": "686",
                "uid": "28e0082b-7827-44c6-bf8e-87c6529457c8"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.23.232",
                "cluster_ips": [
                  "172.20.23.232"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30915,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "fiap-lanchonete-pedido"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "a28e0082b782744c6bf8e87c6529457c-0d5936dea66f79c7.elb.us-east-1.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.data.aws_eks_cluster_auth.eks_cluster_auth",
            "module.vpc.aws_security_group.eks",
            "module.vpc.aws_vpc_security_group_ingress_rule.mongodb_ingress",
            "module.vpc.aws_vpc_security_group_ingress_rule.mysql_ingress",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.aws_security_group_rule.this",
            "module.vpc.module.vpc_endpoints.aws_vpc_endpoint.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:security-group/sg-06844b0b457e36b1b",
            "description": "Allow MySQL inbound traffic",
            "egress": [],
            "id": "sg-06844b0b457e36b1b",
            "ingress": [],
            "name": "fiap-lanchonete-infra-eks20250514221625210000000003",
            "name_prefix": "fiap-lanchonete-infra-eks",
            "owner_id": "304372392573",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "eks-sg"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mongodb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:security-group-rule/sgr-0e8cd40335555a0fd",
            "cidr_ipv4": "10.0.0.0/21",
            "cidr_ipv6": null,
            "description": "TLS from VPC",
            "from_port": 27017,
            "id": "sgr-0e8cd40335555a0fd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06844b0b457e36b1b",
            "security_group_rule_id": "sgr-0e8cd40335555a0fd",
            "tags": null,
            "tags_all": {},
            "to_port": 27017
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "mysql_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:security-group-rule/sgr-0e38c68d2669b652b",
            "cidr_ipv4": "10.0.0.0/21",
            "cidr_ipv6": null,
            "description": "TLS from VPC",
            "from_port": 3306,
            "id": "sgr-0e38c68d2669b652b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06844b0b457e36b1b",
            "security_group_rule_id": "sgr-0e38c68d2669b652b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:network-acl/acl-0eea0ab21c004ee44",
            "default_network_acl_id": "acl-0eea0ab21c004ee44",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eea0ab21c004ee44",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "304372392573",
            "subnet_ids": [
              "subnet-087d65942d74136c0",
              "subnet-0a416da2d2d4eeb19",
              "subnet-0b30cbfe0492f6d07",
              "subnet-0f10a943148850528"
            ],
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:route-table/rtb-08ba7e65711ef7b4c",
            "default_route_table_id": "rtb-08ba7e65711ef7b4c",
            "id": "rtb-08ba7e65711ef7b4c",
            "owner_id": "304372392573",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:security-group/sg-0648af5ac066307e3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0648af5ac066307e3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "304372392573",
            "revoke_rules_on_delete": false,
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a583001d67220a99",
            "arn": "arn:aws:ec2:us-east-1:304372392573:elastic-ip/eipalloc-0a583001d67220a99",
            "domain": "vpc",
            "id": "eipalloc-0a583001d67220a99",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-74-134.compute-1.amazonaws.com",
            "public_ip": "3.234.74.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:internet-gateway/igw-0f8f938eb0b17737e",
            "id": "igw-0f8f938eb0b17737e",
            "owner_id": "304372392573",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a583001d67220a99",
            "association_id": "eipassoc-0d9e1bdc3e7a883d3",
            "connectivity_type": "public",
            "id": "nat-065041d4d55fe0be3",
            "network_interface_id": "eni-007815713d72a173b",
            "private_ip": "10.0.1.34",
            "public_ip": "3.234.74.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f10a943148850528",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            }
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4ef5fef75a54b591080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-065041d4d55fe0be3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4ef5fef75a54b59",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f8f938eb0b17737e",
            "id": "r-rtb-05d92e920c4c1cf3e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d92e920c4c1cf3e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:route-table/rtb-0e4ef5fef75a54b59",
            "id": "rtb-0e4ef5fef75a54b59",
            "owner_id": "304372392573",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:route-table/rtb-05d92e920c4c1cf3e",
            "id": "rtb-05d92e920c4c1cf3e",
            "owner_id": "304372392573",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0766e17543a6f9620",
            "route_table_id": "rtb-0e4ef5fef75a54b59",
            "subnet_id": "subnet-0a416da2d2d4eeb19"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea891738762147e2",
            "route_table_id": "rtb-0e4ef5fef75a54b59",
            "subnet_id": "subnet-040a737a6115c9b1a"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063ff6dcae1fbba1d",
            "route_table_id": "rtb-0e4ef5fef75a54b59",
            "subnet_id": "subnet-0c0662288490672c2"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09387ee3070c8e17a",
            "route_table_id": "rtb-05d92e920c4c1cf3e",
            "subnet_id": "subnet-0f10a943148850528"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051d891fe9965a01f",
            "route_table_id": "rtb-05d92e920c4c1cf3e",
            "subnet_id": "subnet-0b30cbfe0492f6d07"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9b9f7c18f1aedb2",
            "route_table_id": "rtb-05d92e920c4c1cf3e",
            "subnet_id": "subnet-087d65942d74136c0"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-0a416da2d2d4eeb19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a416da2d2d4eeb19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-040a737a6115c9b1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040a737a6115c9b1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-0c0662288490672c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0662288490672c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-0f10a943148850528",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f10a943148850528",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-0b30cbfe0492f6d07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30cbfe0492f6d07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:subnet/subnet-087d65942d74136c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087d65942d74136c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304372392573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:vpc/vpc-0188908d09e941928",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/21",
            "default_network_acl_id": "acl-0eea0ab21c004ee44",
            "default_route_table_id": "rtb-08ba7e65711ef7b4c",
            "default_security_group_id": "sg-0648af5ac066307e3",
            "dhcp_options_id": "dopt-018f7cd2ee84fb0ac",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0188908d09e941928",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08ba7e65711ef7b4c",
            "owner_id": "304372392573",
            "tags": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            },
            "tags_all": {
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-vpc-1"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:security-group/sg-08521e35a35639b06",
            "description": "VPC endpoint security group",
            "egress": [],
            "id": "sg-08521e35a35639b06",
            "ingress": [],
            "name": "fiap-lanchonete-infra-vpc-endpoints-20250514221628847400000005",
            "name_prefix": "fiap-lanchonete-infra-vpc-endpoints-",
            "owner_id": "304372392573",
            "revoke_rules_on_delete": false,
            "tags": {
              "Endpoint": "true",
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-infra-vpc-endpoints-",
              "Project": "Secret",
              "SecurityGroupId": "sg-06844b0b457e36b1b",
              "Subnet0": "subnet-0a416da2d2d4eeb19",
              "Subnet1": "subnet-040a737a6115c9b1a",
              "Subnet2": "subnet-0c0662288490672c2"
            },
            "tags_all": {
              "Endpoint": "true",
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "fiap-lanchonete-infra-vpc-endpoints-",
              "Project": "Secret",
              "SecurityGroupId": "sg-06844b0b457e36b1b",
              "Subnet0": "subnet-0a416da2d2d4eeb19",
              "Subnet1": "subnet-040a737a6115c9b1a",
              "Subnet2": "subnet-0c0662288490672c2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0188908d09e941928"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/21"
            ],
            "description": "HTTPS from VPC",
            "from_port": 443,
            "id": "sgrule-2111481743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08521e35a35639b06",
            "security_group_rule_id": "sgr-0c9be3ed6507f129d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.eks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eks",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304372392573:vpc-endpoint/vpce-0968abb4138d410c2",
            "dns_entry": [
              {
                "dns_name": "vpce-0968abb4138d410c2-5e54oi9b.eks.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0968abb4138d410c2-5e54oi9b-us-east-1c.eks.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0968abb4138d410c2-5e54oi9b-us-east-1a.eks.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0968abb4138d410c2-5e54oi9b-us-east-1b.eks.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "eks.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z00947233J5HBPU2SMRWZ"
              },
              {
                "dns_name": "eks.us-east-1.api.aws",
                "hosted_zone_id": "Z01788992I88QW0I9P2IO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0968abb4138d410c2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02244c97867c8c3c1",
              "eni-0d4e8ca68118c196b",
              "eni-0f02210b7286d3fa8"
            ],
            "owner_id": "304372392573",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-06844b0b457e36b1b",
              "sg-08521e35a35639b06"
            ],
            "service_name": "com.amazonaws.us-east-1.eks",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.0.110",
                "subnet_id": "subnet-040a737a6115c9b1a"
              },
              {
                "ipv4": "10.0.0.171",
                "subnet_id": "subnet-0c0662288490672c2"
              },
              {
                "ipv4": "10.0.0.28",
                "subnet_id": "subnet-0a416da2d2d4eeb19"
              }
            ],
            "subnet_ids": [
              "subnet-040a737a6115c9b1a",
              "subnet-0a416da2d2d4eeb19",
              "subnet-0c0662288490672c2"
            ],
            "tags": {
              "Endpoint": "true",
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "eks",
              "Project": "Secret",
              "SecurityGroupId": "sg-06844b0b457e36b1b",
              "Subnet0": "subnet-0a416da2d2d4eeb19",
              "Subnet1": "subnet-040a737a6115c9b1a",
              "Subnet2": "subnet-0c0662288490672c2"
            },
            "tags_all": {
              "Endpoint": "true",
              "GithubOrg": "fiap-9soat-4",
              "GithubRepo": "fiap-lanchonete-infra",
              "Name": "eks",
              "Project": "Secret",
              "SecurityGroupId": "sg-06844b0b457e36b1b",
              "Subnet0": "subnet-0a416da2d2d4eeb19",
              "Subnet1": "subnet-040a737a6115c9b1a",
              "Subnet2": "subnet-0c0662288490672c2"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0188908d09e941928"
          },
          "dependencies": [
            "module.vpc.aws_security_group.eks",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}